modify configure file to use tomcat admin and roller monitor